# visible-concept-learning

./: .gitignore  LICENSE  README.md  pyproject.toml
augumentation/: augmentation_based_llmdet.py  inferance_llmdet.py  llmdet_output.pkl  llmdet_output_pet.pkl  pyproject.toml
augumentation/utils/: dataset.py
cub_visible_part_bench/: anno_cub200.json  anno_cub_test.json  anno_myself_class50_100.json  aug_info.json
descriptors/: my_cub2-1.json  my_cub_gpt4.1.json  pet_concepts.json
evaluate/: evaluate_cub-vis-test.ipynb  evaluate_cub-vis50.ipynb  evaluate_pet-vis.ipynb
pet_visible_concept_bench/: aug_info.json  pet_anno_myself.json
scripts/: train.sh
src/: build_benchmark.py  create_vis_label.py  create_vis_label_aug.py  train_all.py
src/utils/: dataset.py  train_utils.py
vis_labels/cub_visible/hard/: cub2-1_qwen_qwen3-vl-4b-instruct.json
vis_labels/cub_visible/soft/: cub_auroc_01_qwen_qwen3-vl-4b-instruct.json
vis_labels/pets_visible/: pets_auroc_03_concept-based_prob_qwen_qwen3-vl-2b-instruct.json  pets_auroc_03_concept-based_prob_qwen_qwen3-vl-8b-instruct.json  pets_auroc_03_prob_qwen_qwen3-vl-4b-instruct.json
