[project]
name = "concept-clip"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "transformers>=4.50",
    "Pillow",
    "numpy",
    "opencv-python",
    "tqdm",
    "scikit-learn",
    "pandas",
    "accelerate",
]

[project.optional-dependencies]
clip = [
    "clip @ git+https://github.com/openai/CLIP.git"
]


llmdet = [
    "transformers>=4.50",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
